--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="google-game-services" version="1.0.0"
+<plugin id="google-game-services" version="1.0.1"
 xmlns="http://apache.org/cordova/ns/plugins/1.0" 
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>NSG_GoogleMobileServices</name>
@@ -12,16 +12,15 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 				<param name="android-package" value="org.apache.cordova.googleInAppPurchase.googleInAppPurchase" />
 			</feature>
 		</config-file>
-		 <config-file target="AndroidManifest.xml" parent="application">
-			 <meta-data android:name="com.google.android.gms.games.APP_ID" android:value="@string/app_id" />
-			 <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>
-        </config-file>
-		
+
+		<config-file parent="/*" target="res/values/strings.xml">
+			<string name="app_id">212521125204</string>
+		</config-file>
+
 		<config-file parent="/*" target="AndroidManifest.xml"></config-file>
 		<source-file src="src/android/googleInAppPurchase.java" target-dir="src/org/apache/cordova/googleInAppPurchase" />
 
-		<framework src="com.google.android.gms:play-services-auth:19.0.0" />
-        <framework src="com.google.android.gms:play-services-games:21.0.0" />
+		<framework src="com.android.billingclient:billing:3.0.0" />
 	</platform>
 	
 </plugin>
