--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="google-game-services" version="1.0.1"
+<plugin id="google-in-app-purchase" version="1.0.2"
 xmlns="http://apache.org/cordova/ns/plugins/1.0" 
 xmlns:android="http://schemas.android.com/apk/res/android">
 	<name>NSG_GoogleMobileServices</name>
@@ -13,14 +13,11 @@ xmlns:android="http://schemas.android.com/apk/res/android">
 			</feature>
 		</config-file>
 
-		<config-file parent="/*" target="res/values/strings.xml">
-			<string name="app_id">212521125204</string>
-		</config-file>
-
 		<config-file parent="/*" target="AndroidManifest.xml"></config-file>
 		<source-file src="src/android/googleInAppPurchase.java" target-dir="src/org/apache/cordova/googleInAppPurchase" />
 
 		<framework src="com.android.billingclient:billing:3.0.0" />
+		<framework src="androidx.annotation:annotation:1.1.0" />
 	</platform>
 	
 </plugin>
